testsuite/bsc.typechecker/typeclasses/ATFUnifyHKError.bs.bsc-out.expected
checking package dependencies
compiling ATFUnifyHKError.bs
Error: "ATFUnifyHKError.bs", line 15, column 0: (T0030)
  The contexts for this expression are too general.
  Given type:
    ATFUnifyHKError.Holder a -> ATFUnifyHKError.Foo Prelude.Maybe
  The following contexts are needed:
    ATFUnifyHKError.Container a Prelude.Maybe
      Introduced at the following locations:
	"ATFUnifyHKError.bs", line 16, column 13
