testsuite/bsc.typechecker/typeclasses/ATFUnifyHKError.bs
package ATFUnifyHKError where

-- Test that higher-kinded type function constraints fail properly.

class (Container :: * -> (* -> *) -> *) a s | a -> s where
  type Elem a = s

data Foo f = Foo (f Bool)

-- Reading a struct field whose type uses a higher-kinded ATF (Elem a),
-- and assigning to Foo Maybe, requires Container a Maybe which is missing.
struct Holder a =
  val :: Foo (Elem a)

getMaybe :: Holder a -> Foo Maybe
getMaybe h = h.val
